Fix contrast

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .secundary-color {
-  color: #3d3d3d;
+  color: #333232;
 }
 
 .bold {
